[gd_scene load_steps=11 format=2]

[ext_resource path="res://Resources/Main GUI Images/Title/mm_title.png" type="Texture" id=1]
[ext_resource path="res://Resources/Main GUI Images/BG/bg1_maroon.png" type="Texture" id=2]
[ext_resource path="res://Resources/fonts/arcade_40.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scenes/Menu Scenes/Main_Menu_Teacher/MainMenuTeacher.gd" type="Script" id=4]
[ext_resource path="res://Resources/Button Styles/main_menu_button_normal.tres" type="StyleBox" id=5]
[ext_resource path="res://Resources/Button Styles/main_menu_button_hover.tres" type="StyleBox" id=6]
[ext_resource path="res://Resources/Button Styles/main_menu_button_pressed.tres" type="StyleBox" id=7]
[ext_resource path="res://Resources/Logout Button Image/logout_button_pressed.png" type="Texture" id=8]
[ext_resource path="res://Resources/Logout Button Image/logout_button_normal.png" type="Texture" id=9]
[ext_resource path="res://Resources/Logout Button Image/logout_button_hover.png" type="Texture" id=10]

[node name="Main Menu Teacher" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="."]
position = Vector2( -8.48526, -5.65692 )
scale = Vector2( 1.01326, 1.02161 )
texture = ExtResource( 2 )
centered = false

[node name="MainMenuVericalContainer" type="VBoxContainer" parent="."]
margin_left = 50.0
margin_top = 50.0
margin_right = 1220.0
margin_bottom = 670.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ImageContainer" type="MarginContainer" parent="MainMenuVericalContainer"]
margin_right = 1170.0
margin_bottom = 550.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Title" type="TextureRect" parent="MainMenuVericalContainer/ImageContainer"]
margin_right = 1170.0
margin_bottom = 550.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 1
__meta__ = {
"_editor_description_": "Image to be insereted here"
}

[node name="Buttons" type="HBoxContainer" parent="MainMenuVericalContainer"]
margin_top = 570.0
margin_right = 1170.0
margin_bottom = 620.0
custom_constants/separation = 20

[node name="Button" type="Button" parent="MainMenuVericalContainer/Buttons"]
margin_right = 575.0
margin_bottom = 50.0
size_flags_horizontal = 3
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 0.662745, 0.635294, 1 )
custom_colors/font_color_hover = Color( 0.4, 0.0156863, 0.0156863, 1 )
custom_colors/font_color_pressed = Color( 1, 0.662745, 0.635294, 1 )
text = "summary report"

[node name="Button2" type="Button" parent="MainMenuVericalContainer/Buttons"]
margin_left = 595.0
margin_right = 1170.0
margin_bottom = 50.0
size_flags_horizontal = 3
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 0.662745, 0.635294, 1 )
custom_colors/font_color_hover = Color( 0.4, 0.0156863, 0.0156863, 1 )
custom_colors/font_color_pressed = Color( 1, 0.662745, 0.635294, 1 )
text = "Detailed  report"

[node name="LogoutButton" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -107.385
margin_top = 12.7279
margin_right = -18.3848
margin_bottom = 80.7279
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="MainMenuVericalContainer/Buttons/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MainMenuVericalContainer/Buttons/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="LogoutButton" to="." method="_on_LogoutButton_pressed"]
